# rust-wcgi-starter

./: Cargo.toml  README.md  app.yaml  wasmer.toml
.github/workflows/: ci.yml
